fix image gallery image max size issue on mobile

--- a/src/assets/style/artGallery.css
+++ b/src/assets/style/artGallery.css
@@ -18,10 +18,9 @@
 
 }
 .galleryItem {
-    width: 500px;
+    max-width: 500px;
     margin: 4px;
 }
-
 
 
 /* Formatting for the Modal popup */
